# ScreenRecord

./: .gitignore  README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ruru/screenrecord/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ruru/screenrecord/: MainActivity.kt  MainServiceAct.kt  MainThreadAct.kt
app/src/main/java/com/example/ruru/screenrecord/viewmodel/: MainViewModel.kt
app/src/main/res/layout/: activity_main.xml  activity_main_service.xml  activity_main_thread.xml
app/src/test/java/com/example/ruru/screenrecord/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
screenPush/: CMakeLists.txt  build.gradle
screenPush/src/androidTest/java/com/enjoy/screenpush/: ExampleInstrumentedTest.java
screenPush/src/main/: AndroidManifest.xml
screenPush/src/main/aidl/com/enjoy/screenpush/: IMyAidlInterface.aidl
screenPush/src/main/cpp/: native-lib.cpp  packt.h
screenPush/src/main/java/com/enjoy/screenpush/: AudioCodec.kt  LiveTaskManager.kt  RTMPPackage.kt  ScreenLive.kt  VideoCodec.kt
screenPush/src/main/java/com/enjoy/screenpush/codec/: AudioCodec.kt  VideoCodec.kt
screenPush/src/main/java/com/enjoy/screenpush/data/: RTMPPackage.kt
screenPush/src/main/java/com/enjoy/screenpush/service/: ScreenLiveService.kt
screenPush/src/main/java/com/enjoy/screenpush/thread/: LiveTaskManager.kt  ScreenLiveRunnable.kt
screenPush/src/main/res/values/: strings.xml
screenPush/src/test/java/com/enjoy/screenpush/: ExampleUnitTest.java
